# mlops-vision-service

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  mnist_mlp.keras  pyproject.toml
.github/workflows/: ci.yml
src/mlops_vision_service/: __main__.py  api.py  api_new.py  core.py  inference.py  predict_digit.html  predict_digit_draw.html
tests/: test_api.py  test_core.py  test_placeholder.py
